backends/c/tests/output_nodocs/my_header.h

typedef enum my_library_enumdocumented
    {
    MY_LIBRARY_ENUMDOCUMENTED_A = 0,
    MY_LIBRARY_ENUMDOCUMENTED_B = 1,
    MY_LIBRARY_ENUMDOCUMENTED_C = 2,
    } my_library_enumdocumented;
typedef struct my_library_simpleservice my_library_simpleservice;
typedef enum my_library_ffierror
    {
    MY_LIBRARY_FFIERROR_OK = 0,
    MY_LIBRARY_FFIERROR_NULL = 100,
    MY_LIBRARY_FFIERROR_PANIC = 200,
    MY_LIBRARY_FFIERROR_FAIL = 300,
    } my_library_ffierror;
typedef struct my_library_structdocumented
    {
    float x;
    } my_library_structdocumented;
typedef struct my_library_slicebool
    {
    const uint8_t* data;
    uint64_t len;
    } my_library_slicebool;
typedef struct my_library_sliceu32
    {
    const uint32_t* data;
    uint64_t len;
    } my_library_sliceu32;
typedef struct my_library_sliceu8
    {
    const uint8_t* data;
    uint64_t len;
    } my_library_sliceu8;
typedef struct my_library_slicemutu8
    {
    const uint8_t* data;
    uint64_t len;
    } my_library_slicemutu8;
my_library_enumdocumented documented(my_library_structdocumented x);
my_library_ffierror simple_service_destroy(my_library_simpleservice** context);
my_library_ffierror simple_service_new_with(my_library_simpleservice** context, uint32_t some_value);
my_library_ffierror simple_service_new_without(my_library_simpleservice** context);
my_library_ffierror simple_service_new_with_string(my_library_simpleservice** context, const char* ascii);
my_library_ffierror simple_service_new_failing(my_library_simpleservice** context, uint8_t some_value);
my_library_ffierror simple_service_method_result(const my_library_simpleservice* context, uint32_t anon1);
uint32_t simple_service_method_value(const my_library_simpleservice* context, uint32_t x);
void simple_service_method_void(const my_library_simpleservice* context);
uint8_t simple_service_method_mut_self(my_library_simpleservice* context, my_library_sliceu8 slice);
void simple_service_method_mut_self_void(my_library_simpleservice* context, my_library_slicebool slice);
uint8_t simple_service_method_mut_self_ref(my_library_simpleservice* context, const uint8_t* x, uint8_t* y);
uint8_t simple_service_method_mut_self_ref_slice(my_library_simpleservice* context, const uint8_t* x, uint8_t* y, my_library_sliceu8 slice);
uint8_t simple_service_method_mut_self_ref_slice_limited(my_library_simpleservice* context, const uint8_t* x, uint8_t* y, my_library_sliceu8 slice, my_library_sliceu8 slice2);
my_library_ffierror simple_service_method_mut_self_ffi_error(my_library_simpleservice* context, my_library_slicemutu8 slice);
my_library_ffierror simple_service_method_mut_self_no_error(my_library_simpleservice* context, my_library_slicemutu8 slice);
my_library_sliceu32 simple_service_return_slice(my_library_simpleservice* context);